@@ -1,3 +1,12 @@
 <?php defined('SYSPATH') or die('No direct script access.');
-
+/**
+ * [PHP-ActiveRecord][ref-arm] integration for Kohana Framework.
+ *
+ * [ref-arm]: http://phpactiverecord.org
+ * 
+ * @package    Arm
+ * @author     Devi Mandiri <devi.mandiri@gmail.com>
+ * @copyright  (c) 2011 Devi Mandiri
+ * @license    MIT
+ */
 class Arm extends Kohana_Arm {}
