@@ -1,3 +1,10 @@
 <?php defined('SYSPATH') or die('No direct access allowed.');
-
+/**
+ * Arm Auth driver.
+ *
+ * @package    Arm Auth
+ * @author     Devi Mandiri <devi.mandiri@gmail.com>
+ * @copyright  (c) 2011 Devi Mandiri
+ * @license    MIT
+ */
 class Auth_Arm extends Kohana_Auth_Arm { }
