@@ -1,5 +1,12 @@
 <?php defined('SYSPATH') or die('No direct script access.');
-
+/**
+ * Arm Auth Role Model.
+ *
+ * @package    Arm Auth
+ * @author     Devi Mandiri <devi.mandiri@gmail.com>
+ * @copyright  (c) 2011 Devi Mandiri
+ * @license    MIT
+ */
 class Role extends Arm {
 
 	static $has_many = array(
